[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/components/MemoryComponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=3]

[node name="MemoryComponent" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="NextBeepTimer" type="Timer" parent="." index="1"]

[node name="Light3" parent="." index="2" instance=ExtResource( 2 )]
key = "c"

[node name="Light2" parent="." index="3" instance=ExtResource( 2 )]
key = "x"

[node name="Light1" parent="." index="4" instance=ExtResource( 2 )]
key = "z"

[connection signal="timeout" from="NextBeepTimer" to="." method="_on_NextBeepTimer_timeout"]
